# phils-rust-os

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: framebuffer.rs  gdt.rs  interupts.rs  main.rs  serial.rs  util.rs  vga_text_mode_drawing.rs  vga_text_mode_terminal.rs
src/: gdt.rs  init.rs  interupts.rs  main.rs  random.rs  serial.rs  util.rs  vga_text_mode.rs  vga_text_mode_drawing.rs  vga_text_mode_terminal.rs
