[package]
name = "phils-rust-os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23"
uart_16550 = "0.3.0"
x86_64 = "0.14.11"


[package.metadata.bootimage]
run-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    #"-display", "none"
    ]
test-args = []
test-timeout = 300          # (in seconds)