[package]
name = "phils-rust-os"
version = "0.1.0"
edition = "2021"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.8"
uart_16550 = "0.3.0"
volatile = "0.2.6"
x86_64 = "0.14.11"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"

[package.metadata.bootimage]
run-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    #"-display", "none"
    ]
test-args = []
test-timeout = 300          # (in seconds)
