[workspace]
resolver = "3"
members = ["kernel"]

[package]
name = "phils-rust-os"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bootloader = "0.11.15"
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[profile.dev.package.kernel]
opt-level = 3
debug = false
codegen-units = 1
incremental = false
overflow-checks = false
